--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "test": ""
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "express": "^4.21.1"
+  },
+  "devDependencies": {
+    "prisma": "^5.22.0"
   }
 }
