chore: switching from a javascript server to typescript

--- a/package.json
+++ b/package.json
@@ -24,14 +24,20 @@
   },
   "contributors": [],
   "scripts": {
-    "dev": "",
+    "dev": "tsx watch --env-file .env src/index.ts",
+    "seed": "tsx --env-file .env src/db/seed.ts",
     "test": ""
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
-    "prisma": "^5.22.0"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.1",
+    "prisma": "^5.22.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.3"
   }
 }
