--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
+    "nanoid": "^5.0.8",
     "tsx": "^4.19.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.1",
     "prisma": "^5.22.0",
